--- a/MonthlyReport.Server/appsettings.Development.json
+++ b/MonthlyReport.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MonthlyReport;Integrated Security=True;"
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=DataViewer;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
